Frontend/src/syntactic_analysis.cpp
#include <stdio.h>
#include <stdlib.h>
#include <assert.h>
#include <string.h>
#include <stdarg.h>
#include <errno.h>

#include "tree_funcs.h"
#include "lexical_analysis.h"
#include "syntactic_analysis.h"
#include "dump_funcs.h"
#include "tree_funcs.h"


Status MakeSyntacticAnalysis(Tree* tree, TokenArray* tokens)
{
    assert(tree);
    assert(tokens);

    size_t pos = 0;
    tree->root = GetGrammer(tokens, &pos, tree, tree->root);

    return success;
}

Node* GetGrammer(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetGeneral</strong>\n");
    fflush(log_file);

    node = GetInitOfFunc(tokens, pos, tree, node);

    if (tokens->arr[*pos].type != END)
    {
        fprintf(log_file, "<strong>ERROR: </strong>\n");
        fflush(log_file);
        PrintTokenArray(tokens, *pos);
        PrintNameTable(tree->name_table);
    }

    return node;
}

Node* GetInitOfFunc(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    fprintf(log_file, "<strong>Enter GetInitOfFunc</strong>\n");
    fflush(log_file);

    Node* node_left = GetIdentifier(tokens, pos, tree);

    printf("\n\n%zu\n\n", node_left);

    if (node_left == NULL)
    {
        return GetOperator(tokens, pos, tree, node);
    }

    FreeNode(tree, node_left->left);
    FreeNode(tree, node_left);
    
    if (tokens->arr[*pos + 1].type != KEY_LPAREN)
    {
        *pos -= 1;
        return GetOperator(tokens, pos, tree, node);
    }

    Token ident_token = tokens->arr[*pos];

    *pos += 2;
    
    Node* node_args = GetArgsOfInitFunc(tokens, pos, tree, node);
    
    if (tokens->arr[*pos].type != KEY_RPAREN)
    {
        if (node_args) FreeNode(tree, node_args);
        return NULL;
    }
        
    *pos += 1;

    if (tokens->arr[*pos].type != KEY_LBRACE)
    {
        if (node_args) FreeNode(tree, node_args);
        return NULL;
    }

    *pos += 1;

    Node* node_right = GetOperator(tokens, pos, tree, node);

    if (node_right == NULL)
        return NULL;

    if (tokens->arr[*pos].type != KEY_RBRACE)
    {
        FreeNode(tree, node_right);
        return NULL;
    }
    *pos += 1;

    tree->name_table->now_visible_space++;

    //printf("H3\n");
    return  NewNode(GetSeparateToken(KEY_RBRACE),
                    NewNode(ident_token,
                            node_args,
                            node_right,
                            tree),
                    GetInitOfFunc(tokens, pos, tree, node),
                    tree);
}

Node* GetArgsOfInitFunc(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetArgsOfInitFunc</strong>\n");
    fflush(log_file);

    if (tokens->arr[*pos].type != KEY_INT) return NULL;

    Node* node_right = GetIdentifier(tokens, pos, tree);

    if (node_right == NULL)  return NULL;
    *pos += 1;

    if (   tokens->arr[*pos].type != KEY_RPAREN
        && tokens->arr[*pos].type != KEY_COMMA)
        {
            FreeNode(tree, node_right);
            return NULL;
        }

    if (tokens->arr[*pos].type == KEY_COMMA)
        *pos += 1;

    return NewNode(GetSeparateToken(PARAM),
                   GetArgsOfInitFunc(tokens, pos, tree, node),
                   node_right,
                   tree);
}

Node* GetOperator(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetOperator</strong>\n");
    fflush(log_file);

    node = GetReturnOp(tokens, pos, tree, node);
    if (node != NULL)
        return node;

    node = GetDrawOp(tokens, pos, tree, node);
    if (node != NULL)
        return node;

    node = GetEndOp(tokens, pos, tree);
    if (node != NULL)
        return node;

    node = GetAssignedOp(tokens, pos, tree, node);
    if (node != NULL)
        return node;

    node = GetIfOp(tokens, pos, tree, node);
    if (node != NULL)
        return node;

    node = GetWhileOp(tokens, pos, tree, node);
    if (node != NULL)
        return node;

    node = GetInOutOp(tokens, pos, tree, node);
    if (node != NULL)
        return node;

    return node;
}

Node* GetWhileOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetWhileOp</strong>\n");
    fflush(log_file);

    if (tokens->arr[*pos].type != KEY_WHILE) return NULL;
    Token while_token = tokens->arr[*pos];
    *pos += 1;

    if (tokens->arr[*pos].type != KEY_LPAREN) return NULL;
    *pos += 1;

    Node* node_left = GetFirstCompareOp(tokens, pos, tree, node);
    if (node_left == NULL) return NULL;

    if (tokens->arr[*pos].type != KEY_RPAREN) 
    {
        FreeNode(tree, node_left);
        return NULL;
    }
    *pos += 1;

    if (tokens->arr[*pos].type != KEY_LBRACE)
    {
        FreeNode(tree, node_left);
        return NULL;
    }

    *pos += 1;

    Node* node_right = GetOperator(tokens, pos, tree, node);
    if (node_right == NULL) return NULL;

    if (tokens->arr[*pos].type != KEY_RBRACE)
    {
        FreeNode(tree, node_left);
        return NULL;
    }

    *pos += 1;

    fprintf(log_file,"End GetWhileOp\n");

    return NewNode(GetSeparateToken(KEY_SEMICOLON),
                   NewNode(while_token,
                            node_left,
                            node_right,
                            tree),
                    GetOperator(tokens, pos, tree, node),
                    tree);
}

Node* GetIfOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetIfOp</strong>\n");
    fflush(log_file);

    if (tokens->arr[*pos].type != KEY_IF) return NULL;
    Token if_token = tokens->arr[*pos];
    *pos += 1;

    if (tokens->arr[*pos].type != KEY_LPAREN) return NULL;
    *pos += 1;

    Node* node_condition = GetFirstCompareOp(tokens, pos, tree, node);
    if (node_condition == NULL) return NULL;

    if (tokens->arr[*pos].type != KEY_RPAREN)
    {
        FreeNode(tree, node_condition);
        return NULL;
    }

    *pos += 1;

    if (tokens->arr[*pos].type != KEY_LBRACE)
    {
        FreeNode(tree, node_condition);
        return NULL;
    }

    *pos += 1;

    Node* node_action = GetOperator(tokens, pos, tree, node);
    if (node_action == NULL) return NULL;

    if (tokens->arr[*pos].type != KEY_RBRACE)
    {
        FreeNode(tree, node_condition);
        FreeNode(tree, node_action);
        return NULL;
    }
    *pos += 1;

    Node* node_else = GetElseOp(tokens, pos, tree, node, node_action);

    if (node_else == NULL)
        node_else = node_action;

    return NewNode(GetSeparateToken(KEY_SEMICOLON),
                   NewNode(if_token,
                            node_condition,
                            node_else,
                            tree),
                    GetOperator(tokens, pos, tree, node),
                    tree);
}

Node* GetElseOp(TokenArray* tokens, size_t* pos, Tree* tree,
                Node* node, Node* node_action)
{
    assert(tree);
    assert(tokens);
    assert(pos);
    assert(node_action);

    fprintf(log_file, "<strong>Enter GetElseOp</strong>\n");
    fflush(log_file);

    if (tokens->arr[*pos].type != KEY_ELSE) return NULL;
    Token else_token = tokens->arr[*pos];
    *pos += 1;

    if (tokens->arr[*pos].type != KEY_LBRACE) return NULL;
    *pos += 1;

    Node* node_left = GetOperator(tokens, pos, tree, node);
    if (node_left == NULL) return NULL;

    if (tokens->arr[*pos].type != KEY_RBRACE)
    {
        FreeNode(tree, node_left);
        return NULL;
    }

    *pos += 1;

    return NewNode(else_token,
                   node_action,
                   node_left,
                   tree);
}

Node* GetAssignedOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetAssignedOp</strong>\n");
    fflush(log_file);

    PrintTokenArray(tokens, *pos);

    Node* node_left = GetWord(tokens, pos, tree, node);
    if (node_left == NULL) return NULL;

    if (tokens->arr[*pos].type != OP_ASSIGNED)
    {
        FreeNode(tree, node_left);
        return NULL;
    }
    
    Token assigned_token = tokens->arr[*pos];
    *pos += 1;

    Node* node_right = GetFirstCompareOp(tokens, pos, tree, node);
    if (node_right == NULL) return NULL;

    if (tokens->arr[*pos].type != KEY_SEMICOLON)
    {
        FreeNode(tree, node_right);
        return NULL;
    }

    *pos += 1;

    return  NewNode(GetSeparateToken(KEY_SEMICOLON),
                    NewNode(assigned_token, node_left, node_right, tree),
                    GetOperator(tokens, pos, tree, node),
                    tree);
}

Node* GetReturnOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetReturnOp</strong>\n");
    fflush(log_file);

    if (tokens->arr[*pos].type != KEY_RETURN) return NULL;
    Token return_token = tokens->arr[*pos];
    *pos += 1;

    Node* node_left = GetFirstCompareOp(tokens, pos, tree, node);
    if (node_left == NULL) return NULL;

    if (tokens->arr[*pos].type != KEY_SEMICOLON)
    {
        FreeNode(tree, node_left);
        return NULL;
    }

    *pos += 1;

    fprintf(log_file, "Enter Return\n");

    return  NewNode(GetSeparateToken(KEY_SEMICOLON),
                    NewNode(return_token,
                            node_left,
                            NULL,
                            tree),
                    NULL,
                    tree);
}

Node* GetDrawOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetDrawOp</strong>\n");
    fflush(log_file);

    if (tokens->arr[*pos].type != KEY_DRAW) return NULL;
    Token draw_token = tokens->arr[*pos];
    *pos += 1;

    Node* node_left = GetIdentifier(tokens, pos, tree);
    *pos += 1;

    if (node_left == NULL) return NULL;

    if (tokens->arr[*pos].type != KEY_SEMICOLON)
    {
        FreeNode(tree, node_left);
        return NULL;
    }

    *pos += 1;

    fprintf(log_file, "Enter Draw\n");

    return  NewNode(GetSeparateToken(KEY_SEMICOLON),
                    NewNode(draw_token,
                            node_left,
                            NULL,
                            tree),
                    NULL,
                    tree);
}




Node* GetEndOp(TokenArray* tokens, size_t* pos, Tree* tree)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetEndOp</strong>\n");
    fflush(log_file);

    if (tokens->arr[*pos].type != KEY_END) return NULL;
    Token end_token = tokens->arr[*pos];
    *pos += 1;

    fprintf(log_file, "Enter End\n");

    return NewNode(end_token,
                   NULL,
                   NULL,
                   tree);
}

Node* GetInOutOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetReturnOp</strong>\n");
    fflush(log_file);

    if (   tokens->arr[*pos].type != KEY_IN
        && tokens->arr[*pos].type != KEY_OUT)
        return NULL;

    Token token = tokens->arr[*pos];
    *pos += 1;

    Node* node_left = NULL;

    if (token.type == KEY_IN)
    {
        node_left = GetIdentifier(tokens, pos, tree);
        *pos += 1;
    }
    else
        node_left = GetFirstCompareOp(tokens, pos, tree, node);

    if (node_left == NULL) return NULL;

    if (tokens->arr[*pos].type != KEY_SEMICOLON)
    {
        FreeNode(tree, node_left);
        return NULL;
    }

    *pos += 1;

    return  NewNode(GetSeparateToken(KEY_SEMICOLON),
                    NewNode(token, node_left, NULL, tree),
                    GetOperator(tokens, pos, tree, node),
                    tree);
}

Node* GetFunc(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetFunc</strong>\n");
    fflush(log_file);

    Node* node_left = GetIdentifier(tokens, pos, tree);

    if (node_left == NULL || tokens->arr[*pos + 1].type != KEY_LPAREN)
    {
        if (node_left) FreeNode(tree, node_left);
        return NULL;
    }

    FreeNode(tree, node_left);

    Token ident_token = tokens->arr[*pos];
    *pos += 2;

    Node* node_args = GetFuncArgs(tokens, pos, tree, node);

    if (tokens->arr[*pos].type != KEY_RPAREN)
    {
        FreeNode(tree, node_args);
        FreeNode(tree, node_left);
        return NULL;
    }
    *pos += 1;

    return NewNode(ident_token,
                   node_args,
                   NULL,
                   tree);
}

Node* GetFuncArgs(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetFuncArgs</strong>\n");

    Node* node_right = GetFirstCompareOp(tokens, pos, tree, node);

    if (node_right == NULL)  return NULL;

    if (tokens->arr[*pos].type != KEY_RPAREN && tokens->arr[*pos].type != KEY_COMMA)
    {
        FreeNode(tree, node_right);
        return NULL;
    }

    if (tokens->arr[*pos].type == KEY_COMMA)
        *pos += 1;

    return NewNode(GetSeparateToken(PARAM),
                   GetFuncArgs(tokens, pos, tree, node),
                   node_right,
                   tree);
}

Node* GetFirstCompareOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetFirstCompareOp</strong>\n");
    fflush(log_file);

    node = GetSecondCompareOp(tokens, pos, tree, node);

    while (  tokens->arr[*pos].type == OP_OR)
    {
        Token or_token = tokens->arr[*pos];

        *pos += 1;

        node = NewNode(or_token,
                       node,
                       GetSecondCompareOp(tokens, pos, tree, node),
                       tree);
    }

    return node;
}

Node* GetSecondCompareOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetSecondCompareOp</strong>\n");
    fflush(log_file);

    node = GetThirdCompareOp(tokens, pos, tree, node);

    while (  tokens->arr[*pos].type == OP_AND)
    {
        Token and_token = tokens->arr[*pos];

        *pos += 1;

        node = NewNode(and_token,
                       node,
                       GetThirdCompareOp(tokens, pos, tree, node),
                       tree);
    }

    return node;
}

Node* GetThirdCompareOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetThirdCompareOp</strong>\n");
    fflush(log_file);

    node = GetFourthCompareOp(tokens, pos, tree, node);

    while (   tokens->arr[*pos].type == OP_EQUAL
           || tokens->arr[*pos].type == OP_NOT_EQUAL)
    {
        Token token = tokens->arr[*pos];

        *pos += 1;

        node = NewNode(token,
                       node,
                       GetFourthCompareOp(tokens, pos, tree, node),
                       tree);
    }

    return node;
}

Node* GetFourthCompareOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetFourthCompareOp</strong>\n");
    fflush(log_file);

    node = GetAddSubOp(tokens, pos, tree, node);

    while (   tokens->arr[*pos].type == OP_LESS
           || tokens->arr[*pos].type == OP_BIGGER
           || tokens->arr[*pos].type == OP_LESS_OR_EQUAL
           || tokens->arr[*pos].type == OP_BIGGER_OR_EQUAL)
    {
        Token token = tokens->arr[*pos];

        *pos += 1;

        node = NewNode(token,
                       node,
                       GetAddSubOp(tokens, pos, tree, node),
                       tree);
    }

    return node;
}

Node* GetAddSubOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetAddSubOp</strong>\n");
    fflush(log_file);

    node = GetMulDivModOp(tokens, pos, tree, node);

    while (  tokens->arr[*pos].type == OP_ADD
          || tokens->arr[*pos].type == OP_SUB)
    {
        Token add_sub_token = tokens->arr[*pos];

        *pos += 1;

        node = NewNode(add_sub_token,
                       node,
                       GetMulDivModOp(tokens, pos, tree, node),
                       tree);
    }

    return node;
}

Node* GetMulDivModOp(TokenArray* tokens, size_t* pos,
                     Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetMulDivModOp</strong>\n");
    fflush(log_file);

    node = GetPowOp(tokens, pos, tree, node);

    while (   tokens->arr[*pos].type == OP_MUL
           || tokens->arr[*pos].type == OP_DIV
           || tokens->arr[*pos].type == OP_MOD)
    {
        Token mul_div_mod_token = tokens->arr[*pos];

        *pos += 1;

        node = NewNode(mul_div_mod_token,
                       node,
                       GetPowOp(tokens, pos, tree, node),
                       tree);
    }

    return node;
}

Node* GetPowOp(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetPowOp</strong>\n");
    fflush(log_file);

    node = GetMostPreority(tokens, pos, tree, node);

    while (tokens->arr[*pos].type == OP_POW)
    {
        Token pow_token = tokens->arr[*pos];

        *pos += 1;

        node = NewNode(pow_token,
                       node,
                       GetMostPreority(tokens, pos, tree, node),
                       tree);
    }

    return node;
}

Node* GetSqrt(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetSqrt</strong>\n");
    fflush(log_file);

    if (tokens->arr[*pos].type != OP_SQRT) return NULL;
    Token sqrt_token = tokens->arr[*pos];
    *pos += 1;

    if (tokens->arr[*pos].type != KEY_LPAREN) return NULL;
    *pos += 1;

    Node* node_left = GetFirstCompareOp(tokens, pos, tree, node);

    if (tokens->arr[*pos].type != KEY_RPAREN)
    {
        FreeNode(tree, node_left);
        return NULL;
    }
    *pos += 1;

    return NewNode(sqrt_token,
                   node_left,
                   NULL,
                   tree);
}

Node* GetMostPreority(TokenArray* tokens, size_t* pos,
                      Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetMostPreority</strong>\n");
    fflush(log_file);

    node = GetFunc(tokens, pos, tree, node);
    if (node != NULL)
    {
        fprintf(log_file, "<strong>Find func\n\n");
        fflush(log_file);
        return node;
    }

    node = GetSqrt(tokens, pos, tree, node);
    if (node != NULL)
    {
        fprintf(log_file, "<strong>Find Sqrt\n\n");
        fflush(log_file);
        return node;
    }

    if (tokens->arr[*pos].type == KEY_LPAREN)
    {
        fprintf(log_file, "<strong>Find\"(\": </strong>\n\n");
        fflush(log_file);
        *pos += 1;

        node = GetAddSubOp(tokens, pos, tree, node);

        if (tokens->arr[*pos].type == KEY_RPAREN)
        {
            *pos += 1;
            fprintf(log_file, "<strong>Find \")\"</strong>\n\n");
            return node;
        }

        fprintf(log_file, "<strong>Nor Find \")\"</strong>\n\n");
    }

    node = GetNumber(tokens, pos, tree);
    if (node != NULL)
    {
        *pos += 1;
        fprintf(log_file, "<strong>Find Number\n\n");
        return node;
    }

    node = GetWord(tokens, pos, tree, node);
    if (node != NULL)
    {
        fprintf(log_file, "<strong>Find Word</strong>\n\n");
        return node;
    }

    return NULL;
}

Node* GetNumber(TokenArray* tokens, size_t* pos, Tree* tree)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetNumber</strong>\n");

    if (tokens->arr[*pos].type == NUM)
    {
        fprintf(log_file, "<strong>Add Num</strong>\n\n");
        return NewNode(tokens->arr[*pos], NULL, NULL, tree);
    }

    return NULL;
}

Node* GetWord(TokenArray* tokens, size_t* pos, Tree* tree, Node* node)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetWord</strong>\n");

//     node = GetFunction(tokens, pos, tree, node);
//
//     if (node != NULL)
//     {
//         fprintf(log_file, "<strong>Enter Enter��</strong>\n\n");
//         return node;
//     }

    node = GetIdentifier(tokens, pos, tree);

    if (node != NULL)
    {
        fprintf(log_file, "<strong>Add Word</strong>\n\n");
        *pos += 1;
        PrintTokenArray(tokens, *pos);
        return node;
    }

    return NULL;
}

Node* GetIdentifier(TokenArray* tokens, size_t* pos, Tree* tree)
{
    assert(tree);
    assert(tokens);
    assert(pos);

    fprintf(log_file, "<strong>Enter GetIdentifier</strong>\n");

    if (tokens->arr[*pos].type == KEY_INT && tokens->arr[*pos + 1].type == IDENT)
    {
        fprintf(log_file, "<strong>Find Identifier</strong>\n\n");
        fflush(log_file);
        *pos += 1;

        if (IsIdentExistInNameTable(&tokens->arr[*pos], tree))
        {
            fprintf(log_file, "<strong>ERROR</strong>\n");
            fflush(log_file);
            return NULL;
        }
        else if (tokens->arr[*pos + 1].type == KEY_LPAREN)
            AddInNameTable(FUNC, &tokens->arr[*pos], tree);
        else
            AddInNameTable(VAR, &tokens->arr[*pos], tree);

        return NewNode(tokens->arr[*pos - 1],
                       NewNode(tokens->arr[*pos],
                               NULL,
                               NULL,
                               tree),
                       NULL,
                       tree);
    }

    if (tokens->arr[*pos].type == IDENT && *pos <= MAX_SIZE && tokens->arr[*pos - 1].type != KEY_INT)
    {
        if (   !IsIdentExistInNameTable(&tokens->arr[*pos], tree)
            && tokens->arr[*pos - 1].type != KEY_INT)
            {
            fprintf(log_file, "Ident not exist  %s\n", tokens->arr[*pos].lexeme.str.name);
            fflush(log_file);
            return NULL;
            }

        fprintf(log_file, "<strong>Add Ident</strong>\n\n");
        fflush(log_file);
        return NewNode(tokens->arr[*pos], NULL, NULL, tree);
    }

    return NULL;
}

Token GetSeparateToken(Type type)
{
    Token separate_token = {type, 0, 0, 0};
    return separate_token;
}

bool IsIdentExistInNameTable(Token* token, Tree* tree)
{
    assert(tree);
    assert(token);

    PrintNameTable(tree->name_table);

    for (size_t i = 0; i < tree->name_table->size; ++i)
    {
        if (IsIdentEqual(tree->name_table->arr[i], token, tree))
        {
            fprintf(log_file, "Find equal ident: |%s|\n",
                                            token->lexeme.str.name);
            return true;
        }
    }

    return false;
}

void AddInNameTable(IdentType type, Token* token, Tree* tree)
{
    tree->name_table->arr[tree->name_table->size].hash = token->lexeme.str.hash;
    tree->name_table->arr[tree->name_table->size].name = strdup(token->lexeme.str.name);
    tree->name_table->arr[tree->name_table->size].type = type;
    tree->name_table->arr[tree->name_table->size].visible_space
                        = tree->name_table->now_visible_space;
    tree->name_table->size++;

    PrintNameTable(tree->name_table);
}

bool IsIdentEqual(NameTableEl name_table_el, Token* token, Tree* tree)
{
    assert(token);
    assert(tree);

    char* ident_name  = token->lexeme.str.name;
    size_t ident_hash = token->lexeme.str.hash;

    if (name_table_el.type == FUNC)
        return  name_table_el.hash == ident_hash
            &&  strcmp(name_table_el.name, ident_name) == 0;

    return  name_table_el.hash == ident_hash
            &&  strcmp(name_table_el.name, ident_name) == 0
            &&  tree->name_table->now_visible_space ==
                name_table_el.visible_space;
}
